--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Portfolio</title>
+    <title>Isaiah Nzubechukwu - Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Your Name</h1>
+        <h1>Isaiah Nzubechukwu Praise</h1>
         <p>Web Developer | HTML | CSS | Python</p>
     </header>
     <section class="about">
@@ -23,7 +23,7 @@
         </ul>
     </section>
     <footer>
-        <p>Contact me: your.email@example.com | LinkedIn: <a href="#">Your LinkedIn</a></p>
+        <p>Contact me: your.isaiahnzube22@gmail.com| LinkedIn:https://www.linkedin.com/in/praise-king-5b2528347/?lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3BUjg2JJGBSluq6DSCSmgq6Q%3D%3D <a href="#">Your LinkedIn</a></p>
     </footer>
 </body>
 </html>
